--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,37 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.7
+aiosignal==1.3.1
 asyncio==3.4.3
+attrs==24.2.0
 beautifulsoup4==4.12.3
 bs4==0.0.2
 certifi==2024.2.2
+cffi==1.17.1
 charset-normalizer==3.3.2
 colorama==0.4.6
+frozenlist==1.5.0
+h11==0.14.0
 idna==3.6
 loguru==0.7.2
+lxml==5.3.1
+multidict==6.1.0
+outcome==1.3.0.post0
+packaging==24.2
+propcache==0.2.0
+pycparser==2.22
+PySocks==1.7.1
+python-dotenv==1.0.1
 requests==2.31.0
+selenium==4.26.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.5
+trio==0.27.0
+trio-websocket==0.11.1
+typing_extensions==4.12.2
 urllib3==2.2.1
+webdriver-manager==4.0.2
+websocket-client==1.8.0
 win32-setctime==1.1.0
+wsproto==1.2.0
+yarl==1.18.0
